<resources>
    <string name="app_name">CommonProject</string>

    <string name="str_go_image">Image Handle</string>
    <string name="str_go_recycler">Recycler View</string>
    <string name="activity_label_poetry">诗词卡</string>
    <string name="activity_label_cover_flow">Cover flow</string>
    <string name="str_float_window">float window</string>
    <string name="str_flipper_view">Flipper View</string>

    <string name="exit">退出</string>

    <string name="undo">撤销</string>

    <!-- Title of toolbar for card display begin -->
    <string name="toolbar_title_backup">备份</string>
    <string name="toolbar_title_delete">删除</string>
    <string name="toolbar_title_setting">设置</string>
    <!-- Title of toolbar for card display end -->

    <!-- Title of nav view for card display begin -->
    <string name="nav_title_author">作者</string>
    <string name="nav_title_time">朝代</string>
    <string name="nav_title_type">类型</string>
    <!-- Title of nav view for card display end -->

    <!-- Alert strings begin -->
    <string name="alert_data_deleted">数据已删除</string>
    <string name="alert_data_restored">数据已恢复</string>
    <string name="alert_poetry_not_exists">诗歌不存在</string>
    <string name="btn_write_qrcode_str">生成二维码</string>
    <string name="btn_go_capture_str">扫描二维码</string>
    <string name="show_info_str">显示信息</string>
    <string name="go_hl_str">热加载</string>
    <!-- Alert strings end -->
</resources>
